// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VSheet.vue should render a tile paper 1`] = `

<div class="v-sheet v-sheet--tile theme--light">
</div>

`;

exports[`VSheet.vue should render component and match snapshot 1`] = `

<div class="v-sheet theme--light">
</div>

`;
